fixed gap

--- a/styles/fourthwebsite/fourthwebsite.css
+++ b/styles/fourthwebsite/fourthwebsite.css
@@ -123,6 +123,7 @@ details {
 
 .photos-container {
    display: inline-flex;
+   gap: 40px;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin: 10px 0;
